server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: web-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: web-app-service
            port:
              number: 3000
